<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".detail_quran">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name_quran"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:id="@+id/tv_set_name"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

            <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:id="@+id/img_item_photo"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:src="@android:color/darker_gray"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/tv_item_rank"/>

        </LinearLayout>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quran_identity"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="11dp"
                android:layout_marginLeft="11dp"/>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="111dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="131dp"
                    android:orientation="horizontal"
                    android:layout_marginBottom="7dp"
                    android:layout_marginRight="7dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="7dp">

                <TextView
                        android:layout_width="135dp"
                        android:layout_height="96dp"
                        android:text="@string/title_identity"
                        android:textColor="@android:color/black"
                        android:layout_marginRight="10dp"
                        android:id="@+id/textView"/>

                <TextView
                        android:layout_width="226dp"
                        android:layout_height="98dp"
                        android:text="@string/content_identity"
                        android:textColor="@android:color/black"
                        android:id="@+id/tv_set_identity"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/quran_overview"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:layout_marginRight="11dp"
                android:layout_marginLeft="11dp"
                android:layout_marginBottom="10dp"/>

        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="18dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/overview"
                    android:textColor="@android:color/black"
                    android:justificationMode="inter_word"
                    android:layout_marginLeft="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginTop="5dp"
                    android:id="@+id/tv_set_overview"/>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>